
  * Update Diane Trout's email address.
  * Update watch file for KTp's move to Applications
  * New upstream release.
  * Update build-depends for KF5 and rename of
    libktpcommoninternalsprivate-dev to libktp-dev
  * Update copyright file
    - Remove Files-Excluded, upstream fixed
    - Remove cmake/* as it was removed
    - Remove all of the po/* blocks

 -- Diane Trout <diane@debian.org>  Sun, 12 Jul 2015 21:15:11 -0700

ktp-text-ui (0.9.0+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Update libtelepathy-qt build-dep to 0.9.5
  * Update libktpcommoninternalsprivate-dev build-dep to 0.9.0
  * Update libtelepathy-logger-qt build-dep to 0.8.0
  * Add libkpeople-dev 0.3 build-dep
  * Change to using .install file and default dh_auto_install behavior
    - this makes dh_install --list-missing more reliable.
  * Update version number in lintian-override
  * Update copyright file
  * Prevent another license file from being installed into usr/lib
  * Use libjs-jquery (>= 1.7) and libjs-scriptaculous (>= 1.8.2)
    instead of minimized copies provided by upstream.
  * Update copyright file
  * Update Standards-Version to 3.9.6. No changes needed.
  * Build dfsg version to remove minimized js source files:
    jquery.min.js and scriptaculous183.js

 -- Diane Trout <diane@ghic.org>  Wed, 20 May 2015 22:26:23 -0700

ktp-text-ui (0.8.1-1) unstable; urgency=low

  * New upstream release
  * Update Standards-Version to 3.9.5. No changes needed.
  * Bump ktp-common-internals and kde-telepath-data dependencies to 0.8.1
  * Remove 04_no_require_x11.patch
  * Update debian/copyright

 -- Diane Trout <diane@ghic.org>  Fri, 16 May 2014 21:06:46 -0700

ktp-text-ui (0.7.0-1) unstable; urgency=low

  * New upstream release.
  * Add libqjson-dev Build-Depends.
  * Add 04_no_require_x11.patch from upstream
  * Bump ktp-common-internals and kde-telepath-data dependencies to 0.7.0

 -- Diane Trout <diane@ghic.org>  Wed, 27 Nov 2013 18:16:56 -0800
