@@ -1,14 +1,12 @@
 #!/usr/bin/make -f
 
-%:
-	dh $@ --parallel --with kde --dbg-package=kde-telepathy-text-ui-dbg
+include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
+
+override_dh_strip:
+	$(overridden_command) --dbg-package=kde-telepathy-text-ui-dbg
 
 override_dh_install:
-	rm "debian/tmp/usr/share/kde4/apps/ktelepathy/styles/renkoo.AdiumMessageStyle/Contents/Resources/Renkoo LICENSE.txt"
-	rm "debian/tmp/usr/share/kde4/apps/ktelepathy/styles/SimKete.AdiumMessageStyle/Contents/README"
-	rm "debian/tmp/usr/share/kde4/apps/ktelepathy/styles/WoshiChat.AdiumMessageStyle/LICENSE"
-	rm "debian/tmp/usr/lib/libktpchat.so"
-	dh_install --list-missing
+	$(overridden_command) --fail-missing
 
 get-orig-source:
 	uscan --verbose --force-download --repack --compression xz
