@@ -9,6 +9,9 @@ ktp-text-ui (15.04.3-1) UNRELEASED; urgency=medium
     - Remove Files-Excluded, upstream fixed
     - Remove cmake/* as it was removed
     - Remove all of the po/* blocks
+  * Use dhmk from pkg-kde-tools to build ktp.
+    - Change maintainer to debian-qt-kde
+    - Update debian/rules
 
  -- Diane Trout <diane@debian.org>  Sun, 12 Jul 2015 21:15:11 -0700
 
